--- a/ElectroMarket/CapaPresentacion/Properties/Resources.resx
+++ b/ElectroMarket/CapaPresentacion/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="logo-electromarket-blanco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo-electromarket-blanco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo-electromarket" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo-electromarket.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
