--- a/ElectroMarket/CapaPresentacion/Properties/Resources.resx
+++ b/ElectroMarket/CapaPresentacion/Properties/Resources.resx
@@ -124,4 +124,10 @@
   <data name="logo-electromarket" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo-electromarket.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_sql" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_sql.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="restaurar_bd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\restaurar_bd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
