agrego presupuesto como tipo de documento para realizar una venta. nueva plantilla.

--- a/ElectroMarket/CapaPresentacion/Properties/Resources.resx
+++ b/ElectroMarket/CapaPresentacion/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="PlantillaVenta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PlantillaVenta.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="PlantillaPresupuesto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PlantillaPresupuesto.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
